# chatgpt_client

./: Cargo.toml
examples/: completion.rs  compress.rs  stream.rs
src/: err.rs  lib.rs  types.rs
src/types/: chat_input.rs  chunk.rs  client.rs  err.rs  message.rs  model.rs  response.rs  stream_item.rs
