[package]
name = "chatgpt_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
reqwest = { version = "0.11.16", features = ["json", "stream"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"

eventsource-stream = { version = "0.2.3", optional = true }
futures = { version = "0.3.26", optional = true }

[features]
stream = ["dep:eventsource-stream", "dep:futures"]
