[package]
name = "chatgpt_client"
version = "0.1.3"
authors = ["Takahisa Ishitani"]
description = "ChatGPT client"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"

eventsource-stream = { version = "0.2.3", optional = true }
futures = { version = "0.3.26", optional = true }

[features]
stream = ["dep:eventsource-stream", "dep:futures", "reqwest/stream"]


[[example]]
name = "stream"
required-features = ["stream"]

[[example]]
name = "compress"
required-features = ["stream"]
